crates/strider/tests/snapshots/v3__ppc32le__floats__f64_arith.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "7" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x3f800000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "10" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "15" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "19" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "13" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "20" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
