crates/strider/tests/snapshots/v3__ppc32le__floats__f64_to_f32.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "7" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "11" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "14" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "17" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
